hphp/test/zend/good/ext/standard/tests/file/filesize_variation3.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip only valid for Linux');
}