hphp/test/zend/bad/ext/standard/tests/file/popen_pclose_error-sunos.php.skipif
<?php
if( substr(PHP_OS, 0, 3) != 'Sun')
  die("skip Only valid for Sun Solaris");
?>
